--- a/index.html
+++ b/index.html
@@ -2,9 +2,39 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans+SC:500i|Amiko|Carrois+Gothic+SC" rel="stylesheet">
+    <link href="./css/styles.css" rel="stylesheet">
     <title>Ian Wilson Bolling | Portfolio</title>
   </head>
   <body>
-
+    <div id="app-container">
+      <div class="navbar-top">
+        <h1>Ian Wilson Bolling</h1>
+        <div class="navbar-top_links columns-container">
+          <h2>About</h2>
+          <h2>Projects</h2>
+          <h2>Resumé</h2>
+          <h2>Github</h2>
+          <h2>Social</h2>
+        </div>
+      </div>
+      <div class="section-about">
+        <h3>About Me</h3>
+        <h4>Developer. Designer.</h4>
+        <p></p>
+        <h4>Interests &amp; Personality</h4>
+        <p></p>
+        <ul>
+          <li>Creative Writing: I'm always crafting settings and characters to use in my fiction.</li>
+          <li>Gaming: I love playing them as well as developing them!</li>
+          <li>Language: I've studied German, some Latin and even a bit of Mandarin Chinese.</li>
+          <li>Music: a huge passion of mine; I have quite broad tastes (over 20 genres and counting!)</li>
+        </ul>
+      </div>
+      <h1>Ian Wilson Bolling</h1>
+      <h2>Portfolio</h2>
+      <h3>TaskMaster</h3>
+      <p>Pabst direct trade hexagon chicharrones. Banh mi food truck try-hard small batch lumbersexual, direct trade lo-fi intelligentsia art party etsy succulents kombucha live-edge. Tote bag YOLO trust fund tumblr. Banjo pabst marfa, retro 90's selfies pop-up succulents church-key. Forage normcore knausgaard wayfarers, hammock cred flexitarian hot chicken kogi viral. Fingerstache woke leggings before they sold out, cray live-edge pitchfork asymmetrical PBR&B shabby chic post-ironic pop-up. Small batch tbh yuccie, snackwave plaid mumblecore wolf skateboard cronut.</p>
+    </div>
   </body>
 </html>
