added social icon links and resume link

--- a/index.html
+++ b/index.html
@@ -9,11 +9,21 @@
   <body>
     <div id="app-container">
       <div class="navbar-top">
-        <h1>Ian Wilson Bolling</h1>
+        <div class="navbar-top_title-n-social">
+          <div class="icon-block icon-block_left">
+            <a href="https://github.com/iwbolling/"><i class="icon-github"></i></a>
+            <a href="https://www.linkedin.com/in/ian-bolling-79143813a/"><i class="icon-linkedin"></i></a>
+          </div>
+          <h1>Ian Wilson Bolling</h1>
+          <div class="icon-block icon-block_right">
+            <a href="https://twitter.com/iwbolling"><i class="icon-twitter"></i></a>
+            <a href="mailto:iwbolling@gmail.com?Subject=Read%20Your%20Portfolio"><i class="icon-mail"></i></a>
+          </div>
+        </div>
         <div class="navbar-top_links columns-container">
           <h2>About</h2>
           <a href="./projects.html">Projects</a>
-          <a href="./resume.html">Resumé</a>
+          <a href="./documents/Bolling, Ian - Resumé.pdf">Resumé</a>
           <a href="https://github.com/iwbolling/">GitHub</a>
         </div>
       </div>
