featured projects altered

--- a/projects.html
+++ b/projects.html
@@ -23,7 +23,7 @@
         <div class="navbar-top_links columns-container">
           <a href="./index.html">About</a>
           <h2>Projects</h2>
-          <a href="./documents/Bolling, Ian - Resumé.pdf">Resumé</a>
+          <a href="https://drive.google.com/open?id=0Bz7G0BJK4KJhbS1vT1RVM1h5Nkk" type="pdf">Resumé</a>
           <a href="https://github.com/iwbolling/">GitHub</a>
         </div>
       </div>
@@ -31,8 +31,9 @@
         <h3>Project Examplars</h3>
         <div class="project-block proj_taskmaster columns-container">
           <div class="project-pane">
-            <a href="http://placehold.it"><img src="http://placehold.it/500x300"></a>
-            <div class="project-pane_hexagon">
+            <img src="./images/TaskMaster Example 001.jpg">
+            <div class="hexagon"></div>
+            <div class="project-pane_hextext">
               <p>Mar</p>
               <h4>2017</h4>
             </div>
@@ -49,6 +50,7 @@
               <li>Backbone.js and React.js in MVC framework</li>
               <li>Flux architecture for unidirectional data flow</li>
             </ul>
+            <a class="link-repo" href="https://github.com/JeffWeinreich/TaskManager">Repo</a>
           </div>
         </div>
         <div class="project-block proj_bbc columns-container">
@@ -58,10 +60,16 @@
             <ul>
               <li>HTML5</li>
             </ul>
+            <div class="project-links">
+              <a class="link-demo" href="https://bbc-radio-playlist.herokuapp.com/">Demo</a>
+              <a class="link-repo" href="">Repo</a>
+            </div>
+
           </div>
           <div class="project-pane">
-            <a href="http://placehold.it"><img src="http://placehold.it/500x300"></a>
-            <div class="project-pane_hexagon">
+            <img src="./images/BBC Radio Example 001.jpg">
+            <div class="hexagon"></div>
+            <div class="project-pane_hextext">
               <p>Feb</p>
               <h4>2017</h4>
             </div>
@@ -73,8 +81,9 @@
         </div>
         <div class="project-block proj_momofuku columns-container">
           <div class="project-pane">
-              <a href="http://placehold.it"><img src="http://placehold.it/500x300"></a>
-              <div class="project-pane_hexagon">
+              <img src="./images/Momofuku Example 001.jpg">
+              <div class="hexagon"></div>
+              <div class="project-pane_hextext">
                 <p></p>
                 <h4>2017</h4>
               </div>
@@ -84,13 +93,14 @@
               </div>
             </div>
             <div class="project-text">
-              <h4>TaskMaster</h4>
+              <h4>Momofuku Clone</h4>
               <p></p>
               <ul>
                 <li>HTML5, CSS and Sass</li>
-                <li>Backbone.js and React.js in MVC framework</li>
-                <li>Flux architecture for unidirectional data flow</li>
+                <li></li>
               </ul>
+              <a class="link-demo" href="http://momo-clone.surge.sh/">Demo</a>
+              <a class="link-repo" href="https://github.com/iwbolling/assignment-07">Repo</a>
             </div>
         </div>
       </div>
