--- a/projects.html
+++ b/projects.html
@@ -32,7 +32,6 @@
         <div class="project-block proj_taskmaster columns-container">
           <div class="project-pane">
             <img src="./images/TaskMaster Example 001.jpg">
-            <div class="hexagon"></div>
             <div class="project-pane_hextext">
               <p>Mar</p>
               <h4>2017</h4>
@@ -44,31 +43,41 @@
           </div>
           <div class="project-text">
             <h4>TaskMaster</h4>
-            <p></p>
+            <p>A mobile-first, everyday app that allows users to easily create to-do lists and then share them with others, allowing for better communication and coordination.</p>
+            <p>Tech stack includes:</p>
             <ul>
               <li>HTML5, CSS and Sass</li>
               <li>Backbone.js and React.js in MVC framework</li>
               <li>Flux architecture for unidirectional data flow</li>
             </ul>
-            <a class="link-repo" href="https://github.com/JeffWeinreich/TaskManager">Repo</a>
+            <div class="project-links">
+              <div class="link-repo">
+                <a href="https://github.com/JeffWeinreich/TaskManager">Repo</a>
+              </div>
+            </div>
           </div>
         </div>
-        <div class="project-block proj_bbc columns-container">
+        <div class="project-block proj_iceland columns-container">
           <div class="project-text">
-            <h4>BBC Radio Playlists</h4>
-            <p></p>
+            <h4>Facts About Iceland</h4>
+            <p>A single-page, responsive site giving up-to-date information on Iceland's available flights, concerts and carpools.</p>
+            <p>Tech stack includes:</p>
             <ul>
-              <li>HTML5</li>
+              <li>HTML5, CSS and Sass</li>
+              <li>JSON API calls and jQuery</li>
+              <li>Bootstrap elements</li>
             </ul>
-            <div class="project-links">
-              <a class="link-demo" href="https://bbc-radio-playlist.herokuapp.com/">Demo</a>
-              <a class="link-repo" href="">Repo</a>
+            <div class="project-links columns-container">
+              <div class="link-demo">
+                <a href="http://iceland-demo.surge.sh/">Demo</a>
+              </div>
+              <div class="link-repo">
+                <a href="https://github.com/iwbolling/assignment-18">Repo</a>
+              </div>
             </div>
-
           </div>
           <div class="project-pane">
-            <img src="./images/BBC Radio Example 001.jpg">
-            <div class="hexagon"></div>
+            <img src="./images/Iceland Example 001.jpg">
             <div class="project-pane_hextext">
               <p>Feb</p>
               <h4>2017</h4>
@@ -79,12 +88,11 @@
             </div>
           </div>
         </div>
-        <div class="project-block proj_momofuku columns-container">
+        <div class="project-block proj_pomo columns-container">
           <div class="project-pane">
-              <img src="./images/Momofuku Example 001.jpg">
-              <div class="hexagon"></div>
+              <img src="./images/Pomodoro Timer Example 001.jpg">
               <div class="project-pane_hextext">
-                <p></p>
+                <p>Feb</p>
                 <h4>2017</h4>
               </div>
               <div class="project-pane_infobar">
@@ -93,14 +101,20 @@
               </div>
             </div>
             <div class="project-text">
-              <h4>Momofuku Clone</h4>
+              <h4>Pomodoro Timer</h4>
               <p></p>
               <ul>
                 <li>HTML5, CSS and Sass</li>
                 <li></li>
               </ul>
-              <a class="link-demo" href="http://momo-clone.surge.sh/">Demo</a>
-              <a class="link-repo" href="https://github.com/iwbolling/assignment-07">Repo</a>
+              <div class="project-links columns-container">
+                <div class="link-demo">
+                  <a href="http://pomo-timer.surge.sh/">Demo</a>
+                </div>
+                <div class="link-repo">
+                  <a href="https://github.com/iwbolling/assignment-16">Repo</a>
+                </div>
+              </div>
             </div>
         </div>
       </div>
