projects page 75%, exploring hexagon implementations

--- a/projects.html
+++ b/projects.html
@@ -88,31 +88,27 @@
             </div>
           </div>
         </div>
-        <div class="project-block proj_pomo columns-container">
+        <div class="project-block proj_momo columns-container">
           <div class="project-pane">
-              <img src="./images/Pomodoro Timer Example 001.jpg">
+              <img src="./images/BBC Radio Example 001.jpg">
               <div class="project-pane_hextext">
-                <p>Feb</p>
+                <p>Jan</p>
                 <h4>2017</h4>
               </div>
               <div class="project-pane_infobar">
                 <p>&#8226; Reponsive styling for mobile, tablet and desktop</p>
-                <p>&#8226; Dynamic navbars  &#8226; Bootstrap  &#8226; Sass</p>
+                <p>&#8226; Dynamic navbars  &#8226; Sass</p>
               </div>
             </div>
             <div class="project-text">
-              <h4>Pomodoro Timer</h4>
-              <p></p>
-              <ul>
-                <li>HTML5, CSS and Sass</li>
-                <li></li>
-              </ul>
+              <h4>Momofuku Site Clone</h4>
+              <p>A stylistic replication of the Momofuku Restaurant Group's home page. Features custom styling with a responsive layout and multiple navbars.</p>
               <div class="project-links columns-container">
                 <div class="link-demo">
-                  <a href="http://pomo-timer.surge.sh/">Demo</a>
+                  <a href="http://momo-clone.surge.sh/">Demo</a>
                 </div>
                 <div class="link-repo">
-                  <a href="https://github.com/iwbolling/assignment-16">Repo</a>
+                  <a href="https://github.com/iwbolling/assignment-07">Repo</a>
                 </div>
               </div>
             </div>
