fixed incorrect image link

--- a/projects.html
+++ b/projects.html
@@ -90,7 +90,7 @@
         </div>
         <div class="project-block proj_momo columns-container">
           <div class="project-pane">
-              <img src="./images/BBC Radio Example 001.jpg">
+              <img src="./images/Momofuku Example 001.jpg">
               <div class="project-pane_hextext">
                 <p>Jan</p>
                 <h4>2017</h4>
