Ceaseless Styling Stuff

--- a/projects.html
+++ b/projects.html
@@ -39,6 +39,7 @@
             <div class="project-pane_infobar">
               <h4>Collaborative</h4>
               <p>&#8226; Backbone.js  &#8226; React.js</p>
+              <p>&#8226; .NET database</p>
             </div>
           </div>
           <div class="project-text">
