implemented new tabs opening for external links

--- a/projects.html
+++ b/projects.html
@@ -11,8 +11,8 @@
       <div class="navbar-top">
         <div class="navbar-top_title-n-social">
           <div class="icon-block icon-block_left">
-            <a href="https://github.com/iwbolling/"><i class="icon-github"></i></a>
-            <a href="https://www.linkedin.com/in/ian-bolling-79143813a/"><i class="icon-linkedin"></i></a>
+            <a href="https://github.com/iwbolling/" target="_blank"><i class="icon-github"></i></a>
+            <a href="https://www.linkedin.com/in/ian-bolling-79143813a/" target="_blank"><i class="icon-linkedin"></i></a>
           </div>
           <h1>Ian Wilson Bolling</h1>
           <div class="icon-block icon-block_right">
@@ -23,8 +23,8 @@
         <div class="navbar-top_links columns-container">
           <a href="./index.html">About</a>
           <h2>Projects</h2>
-          <a href="https://drive.google.com/open?id=0Bz7G0BJK4KJhR19NYk5XU0ZHRTg" type="pdf">Resumé</a>
-          <a href="https://github.com/iwbolling/">GitHub</a>
+          <a href="https://drive.google.com/open?id=0Bz7G0BJK4KJhR19NYk5XU0ZHRTg" target="_blank" type="pdf">Resumé</a>
+          <a href="https://github.com/iwbolling/" target="_blank">GitHub</a>
         </div>
       </div>
       <div class="section-projects">
