--- a/index.html
+++ b/index.html
@@ -11,20 +11,20 @@
       <div class="navbar-top">
         <div class="navbar-top_title-n-social">
           <div class="icon-block icon-block_left">
-            <a href="https://github.com/iwbolling/"><i class="icon-github"></i></a>
-            <a href="https://www.linkedin.com/in/ian-bolling-79143813a/"><i class="icon-linkedin"></i></a>
+            <a href="https://github.com/iwbolling/" target="_blank"><i class="icon-github"></i></a>
+            <a href="https://www.linkedin.com/in/ian-bolling-79143813a/" target="_blank"><i class="icon-linkedin"></i></a>
           </div>
           <h1>Ian Wilson Bolling</h1>
           <div class="icon-block icon-block_right">
-            <a href="https://twitter.com/iwbolling"><i class="icon-twitter"></i></a>
+            <a href="https://twitter.com/iwbolling" target="_blank"><i class="icon-twitter"></i></a>
             <a href="mailto:iwbolling@gmail.com?Subject=Read%20Your%20Portfolio"><i class="icon-mail"></i></a>
           </div>
         </div>
         <div class="navbar-top_links columns-container">
           <h2>About</h2>
           <a href="./projects.html">Projects</a>
-          <a href="https://drive.google.com/open?id=0Bz7G0BJK4KJhR19NYk5XU0ZHRTg" type="pdf">Resumé</a>
-          <a href="https://github.com/iwbolling/">GitHub</a>
+          <a href="https://drive.google.com/open?id=0Bz7G0BJK4KJhR19NYk5XU0ZHRTg" target="_blank" type="pdf">Resumé</a>
+          <a href="https://github.com/iwbolling/" target="_blank">GitHub</a>
         </div>
       </div>
       <div class="section-about">
